# QGraph

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  dev.py  pyproject.toml  release.py
.trae/rules/: project_rules.md
demo/: 01_hello.sh  02_prepare_data.py  03_train.py  04_evaluate.py  05_quantize.sh  06_export.py  07_functions.py  08_fail_test.py  09_long_running.py  10_env_test.py
docs/: product-analysis.md  promo_en.md  promo_juejin.md  promo_v2ex.md
src/qgraph/: cli.py
src/qgraph/core/: models.py  storage.py
src/qgraph/engine/: executor.py  run_manager.py
src/qgraph/server/: api.py  app.py  ws.py
src/qgraph/templates/: ai_rules.md
tests/: test_smoke.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: CodeEditor.tsx  ConfigPanel.tsx  Dashboard.tsx  LogPanel.tsx  PipelineNode.tsx  QuickAdd.tsx  Sidebar.tsx  Toolbar.tsx
web/src/hooks/: useTheme.ts
