[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgraph"
version = "0.1.5"
description = "A lightweight visual pipeline editor for workflow orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "晓强" },
]
keywords = ["pipeline", "workflow", "dag", "visual-editor", "task-scheduler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
qgraph = "qgraph.cli:main"

[project.urls]
Homepage = "https://github.com/xiaoqiang-cheng/QGraph"
Repository = "https://github.com/xiaoqiang-cheng/QGraph"

[tool.hatch.build.targets.wheel]
packages = ["src/qgraph"]

[tool.hatch.build.targets.wheel.force-include]
"src/qgraph/web/dist" = "qgraph/web/dist"
"src/qgraph/templates" = "qgraph/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
